1. 調整 RESTful API 模式 (路由單筆則不加 s)  2. swagger 文件內容部分修改
