# routes/posts.js
@@ -6,7 +6,7 @@ const { isAuth } = require('../handStates/auth');
 const Posts = require('../model/posts');
 const PostsControllers = require('../controllers/posts');
 
-router.get('/', isAuth, (req, res, next) =>
+router.get('/posts', isAuth, (req, res, next) =>
   /** #swagger.summary = '取得所有貼文'
     * #swagger.description = '取得所有貼文'
     * #swagger.tags = ['動態貼文']
@@ -48,7 +48,7 @@ router.get('/', isAuth, (req, res, next) =>
   PostsControllers.getPosts(req, res, next)
 );
 router.get(
-  '/:id',
+  '/post/:id',
   isAuth,
   /** #swagger.summary = '取得單一貼文',
     #swagger.description = `取得單一貼文
@@ -97,7 +97,7 @@ router.get(
    */
   (req, res, next) => PostsControllers.getPost(req, res, next)
 );
-router.post('/', isAuth, (req, res, next) =>
+router.post('/post/', isAuth, (req, res, next) =>
   /** #swagger.summary = '新增貼文'
     * #swagger.description = '新增單筆貼文'
     * #swagger.tags = ['動態貼文']
@@ -138,7 +138,7 @@ router.post('/', isAuth, (req, res, next) =>
    */
   PostsControllers.createdPost(req, res, next)
 );
-router.delete('/', isAuth, (req, res, next) =>
+router.delete('/posts/', isAuth, (req, res, next) =>
   /** #swagger.summary = '刪除所有貼文'
     * #swagger.description = '刪除所有貼文'
     * #swagger.tags = ['動態貼文']
@@ -148,7 +148,7 @@ router.delete('/', isAuth, (req, res, next) =>
    */
   PostsControllers.delALLPosts(req, res, next)
 );
-router.delete('/:id', isAuth, (req, res, next) =>
+router.delete('/post/:id', isAuth, (req, res, next) =>
   /** #swagger.summary = '刪除單筆貼文'
     * #swagger.description = '刪除單筆貼文'
     * #swagger.tags = ['動態貼文']
@@ -164,7 +164,7 @@ router.delete('/:id', isAuth, (req, res, next) =>
   PostsControllers.delOnePost(req, res, next)
 );
 router.patch(
-  '/:id/likes',
+  '/post/:id/likes',
   isAuth,
   /** #swagger.summary = '新增與移除單筆貼文按讚',
     * #swagger.description = `
@@ -210,7 +210,7 @@ router.patch(
   */
   (req, res, next) => PostsControllers.toggleLike(req, res, next)
 );
-router.patch('/:id', isAuth, (req, res, next) =>
+router.patch('/post/:id', isAuth, (req, res, next) =>
   /** #swagger.summary = '更新單筆貼文'
     * #swagger.tags = ['動態貼文']
     * #swagger.description = '更新單筆貼文',
@@ -261,7 +261,7 @@ router.patch('/:id', isAuth, (req, res, next) =>
   PostsControllers.upDatePost(req, res, next)
 );
 router.post(
-  '/:id/comment',
+  '/post/:id/comment',
   isAuth,
   /** #swagger.summary = '新增一則貼文的留言',
     * #swagger.tags = ['動態貼文']
@@ -309,7 +309,7 @@ router.post(
   (req, res, next) => PostsControllers.createComment(req, res, next)
 );
 router.get(
-  '/user/:id',
+  '/posts/user/:id',
   isAuth,
   /** #swagger.summary = '取得個人所有貼文列表',
     * #swagger.tags = ['動態貼文']
